fixed root type name showing as obj & newlines via <p>, using <span> instead

--- a/.docs/DotDocs/Core/Models/Language/Members/T1.md
+++ b/.docs/DotDocs/Core/Models/Language/Members/T1.md
@@ -1,4 +1,4 @@
-# <code><p title="undefined">[object Object]</p></code>
+# <code><span title="null">T1</span></code>
 
 ```
 ட MemberInfo
@@ -9,35 +9,35 @@ Summary not provided.
 
 ## `public` Properties
 
-### CustomAttributes <code><p title="undefined">[object Object]</p><<p title="undefined">CustomAttributeData</p>></code> `static` `virtual` `readonly`
+### CustomAttributes <code><span title="null">IEnumerable</span><<span title="undefined">CustomAttributeData</span>></code> `static` `virtual` `readonly`
 
 Summary not provided.
 
-### DeclaringType <code><p title="undefined">[object Object]</p></code> `static` `abstract` `readonly`
+### DeclaringType <code><span title="null">Type</span></code> `static` `abstract` `readonly`
 
 Summary not provided.
 
-### IsCollectible <code><p title="undefined">[object Object]</p></code> `static` `virtual` `readonly`
+### IsCollectible <code><span title="null">Boolean</span></code> `static` `virtual` `readonly`
 
 Summary not provided.
 
-### MemberType <code><p title="undefined">[object Object]</p></code> `static` `abstract` `readonly`
+### MemberType <code><span title="null">MemberTypes</span></code> `static` `abstract` `readonly`
 
 Summary not provided.
 
-### MetadataToken <code><p title="undefined">[object Object]</p></code> `static` `virtual` `readonly`
+### MetadataToken <code><span title="null">Int32</span></code> `static` `virtual` `readonly`
 
 Summary not provided.
 
-### Module <code><p title="undefined">[object Object]</p></code> `static` `virtual` `readonly`
+### Module <code><span title="null">Module</span></code> `static` `virtual` `readonly`
 
 Summary not provided.
 
-### Name <code><p title="undefined">[object Object]</p></code> `static` `abstract` `readonly`
+### Name <code><span title="null">String</span></code> `static` `abstract` `readonly`
 
 Summary not provided.
 
-### ReflectedType <code><p title="undefined">[object Object]</p></code> `static` `abstract` `readonly`
+### ReflectedType <code><span title="null">Type</span></code> `static` `abstract` `readonly`
 
 Summary not provided.
 
@@ -49,7 +49,7 @@ Summary not provided.
 
 Summary not provided.
 
-- *@param* obj <code><p title="undefined">[object Object]</p></code>
+- *@param* obj <code><span title="null">Object</span></code>
 
 - *@returns* 
 
@@ -57,7 +57,7 @@ Summary not provided.
 
 Summary not provided.
 
-- *@param* inherit <code><p title="undefined">[object Object]</p></code>
+- *@param* inherit <code><span title="null">Boolean</span></code>
 
 - *@returns* 
 
@@ -65,8 +65,8 @@ Summary not provided.
 
 Summary not provided.
 
-- *@param* attributeType <code><p title="undefined">[object Object]</p></code>
-- *@param* inherit <code><p title="undefined">[object Object]</p></code>
+- *@param* attributeType <code><span title="null">Type</span></code>
+- *@param* inherit <code><span title="null">Boolean</span></code>
 
 - *@returns* 
 
@@ -92,7 +92,7 @@ Summary not provided.
 
 Summary not provided.
 
-- *@param* other <code><p title="undefined">[object Object]</p></code>
+- *@param* other <code><span title="null">MemberInfo</span></code>
 
 - *@returns* 
 
@@ -100,8 +100,8 @@ Summary not provided.
 
 Summary not provided.
 
-- *@param* attributeType <code><p title="undefined">[object Object]</p></code>
-- *@param* inherit <code><p title="undefined">[object Object]</p></code>
+- *@param* attributeType <code><span title="null">Type</span></code>
+- *@param* inherit <code><span title="null">Boolean</span></code>
 
 - *@returns* 
 
