--- a/.docs/DotDocs/Core/Models/Language/Members/T2.md
+++ b/.docs/DotDocs/Core/Models/Language/Members/T2.md
@@ -1,4 +1,4 @@
-# <code><p title="undefined">[object Object]</p></code>
+# <code><span title="null">T2</span></code>
 
 ```
 ட CommonComments
@@ -9,19 +9,19 @@ Summary not provided.
 
 ## `public` Properties
 
-### Example <code><p title="undefined">[object Object]</p></code>
+### Example <code><span title="null">String</span></code>
 
 Summary not provided.
 
-### Inheritdoc <code><p title="undefined">[object Object]</p></code>
+### Inheritdoc <code><span title="null">InheritdocTag</span></code>
 
 Summary not provided.
 
-### Remarks <code><p title="undefined">[object Object]</p></code>
+### Remarks <code><span title="null">String</span></code>
 
 Summary not provided.
 
-### Summary <code><p title="undefined">[object Object]</p></code>
+### Summary <code><span title="null">String</span></code>
 
 Summary not provided.
 
@@ -33,7 +33,7 @@ Summary not provided.
 
 Summary not provided.
 
-- *@param* obj <code><p title="undefined">[object Object]</p></code>
+- *@param* obj <code><span title="null">Object</span></code>
 
 - *@returns* 
 
