testing new hyper link

--- a/.docs/DotDocs/Core/Models/Language/Members/T1.md
+++ b/.docs/DotDocs/Core/Models/Language/Members/T1.md
@@ -1,4 +1,4 @@
-# <code><span title="undefined">T1</span></code>
+# <code><a href="T1.md">T1</a></code>
 
 ```
 ட 
@@ -9,35 +9,35 @@ Summary not provided.
 
 ## `public` Properties
 
-### CustomAttributes <code><span title="undefined">IEnumerable</span><<span title="undefined">CustomAttributeData</span>></code> `static` `virtual` `readonly`
+### CustomAttributes <code><a href="..\..\..\..\..\System\Collections\Generic\IEnumerable.md">IEnumerable</a><<span title="undefined">CustomAttributeData</span>></code> `static` `virtual` `readonly`
 
 Summary not provided.
 
-### DeclaringType <code><span title="undefined">Type</span></code> `static` `abstract` `readonly`
+### DeclaringType <code><a href="..\..\..\..\..\System\Type.md">Type</a></code> `static` `abstract` `readonly`
 
 Summary not provided.
 
-### IsCollectible <code><span title="undefined">Boolean</span></code> `static` `virtual` `readonly`
+### IsCollectible <code><a href="..\..\..\..\..\System\Boolean.md">Boolean</a></code> `static` `virtual` `readonly`
 
 Summary not provided.
 
-### MemberType <code><span title="undefined">MemberTypes</span></code> `static` `abstract` `readonly`
+### MemberType <code><a href="..\..\..\..\..\System\Reflection\MemberTypes.md">MemberTypes</a></code> `static` `abstract` `readonly`
 
 Summary not provided.
 
-### MetadataToken <code><span title="undefined">Int32</span></code> `static` `virtual` `readonly`
+### MetadataToken <code><a href="..\..\..\..\..\System\Int32.md">Int32</a></code> `static` `virtual` `readonly`
 
 Summary not provided.
 
-### Module <code><span title="undefined">Module</span></code> `static` `virtual` `readonly`
+### Module <code><a href="..\..\..\..\..\System\Reflection\Module.md">Module</a></code> `static` `virtual` `readonly`
 
 Summary not provided.
 
-### Name <code><span title="undefined">String</span></code> `static` `abstract` `readonly`
+### Name <code><a href="..\..\..\..\..\System\String.md">String</a></code> `static` `abstract` `readonly`
 
 Summary not provided.
 
-### ReflectedType <code><span title="undefined">Type</span></code> `static` `abstract` `readonly`
+### ReflectedType <code><a href="..\..\..\..\..\System\Type.md">Type</a></code> `static` `abstract` `readonly`
 
 Summary not provided.
 
@@ -49,7 +49,7 @@ Summary not provided.
 
 Summary not provided.
 
-- *@param* obj <code><span title="undefined">Object</span></code>
+- *@param* obj <code><a href="..\..\..\..\..\System\Object.md">Object</a></code>
 
 - *@returns* 
 
@@ -57,7 +57,7 @@ Summary not provided.
 
 Summary not provided.
 
-- *@param* inherit <code><span title="undefined">Boolean</span></code>
+- *@param* inherit <code><a href="..\..\..\..\..\System\Boolean.md">Boolean</a></code>
 
 - *@returns* 
 
@@ -65,8 +65,8 @@ Summary not provided.
 
 Summary not provided.
 
-- *@param* attributeType <code><span title="undefined">Type</span></code>
-- *@param* inherit <code><span title="undefined">Boolean</span></code>
+- *@param* attributeType <code><a href="..\..\..\..\..\System\Type.md">Type</a></code>
+- *@param* inherit <code><a href="..\..\..\..\..\System\Boolean.md">Boolean</a></code>
 
 - *@returns* 
 
@@ -92,7 +92,7 @@ Summary not provided.
 
 Summary not provided.
 
-- *@param* other <code><span title="undefined">MemberInfo</span></code>
+- *@param* other <code><a href="..\..\..\..\..\System\Reflection\MemberInfo.md">MemberInfo</a></code>
 
 - *@returns* 
 
@@ -100,8 +100,8 @@ Summary not provided.
 
 Summary not provided.
 
-- *@param* attributeType <code><span title="undefined">Type</span></code>
-- *@param* inherit <code><span title="undefined">Boolean</span></code>
+- *@param* attributeType <code><a href="..\..\..\..\..\System\Type.md">Type</a></code>
+- *@param* inherit <code><a href="..\..\..\..\..\System\Boolean.md">Boolean</a></code>
 
 - *@returns* 
 
