--- a/.docs/DotDocs/Core/Models/Language/Members/T2.md
+++ b/.docs/DotDocs/Core/Models/Language/Members/T2.md
@@ -1,4 +1,4 @@
-# <code><span title="undefined">T2</span></code>
+# <code><a href="T2.md">T2</a></code>
 
 ```
 ட 
@@ -9,19 +9,19 @@ Summary not provided.
 
 ## `public` Properties
 
-### Example <code><span title="undefined">String</span></code>
+### Example <code><a href="..\..\..\..\..\System\String.md">String</a></code>
 
 Summary not provided.
 
-### Inheritdoc <code><span title="undefined">InheritdocTag</span></code>
+### Inheritdoc <code><a href="..\..\..\..\..\LoxSmoke\DocXml\InheritdocTag.md">InheritdocTag</a></code>
 
 Summary not provided.
 
-### Remarks <code><span title="undefined">String</span></code>
+### Remarks <code><a href="..\..\..\..\..\System\String.md">String</a></code>
 
 Summary not provided.
 
-### Summary <code><span title="undefined">String</span></code>
+### Summary <code><a href="..\..\..\..\..\System\String.md">String</a></code>
 
 Summary not provided.
 
@@ -33,7 +33,7 @@ Summary not provided.
 
 Summary not provided.
 
-- *@param* obj <code><span title="undefined">Object</span></code>
+- *@param* obj <code><a href="..\..\..\..\..\System\Object.md">Object</a></code>
 
 - *@returns* 
 
