improved isRenderable logic

--- a/.docs/DotDocs/Core/Models/Language/Members/T2.md
+++ b/.docs/DotDocs/Core/Models/Language/Members/T2.md
@@ -1,4 +1,4 @@
-# <code><span title="undefined">MemberModel</span><<span title="undefined">MethodInfo</span>, <span title="undefined">CommonComments</span>></code>
+# <code><span title="undefined">T2</span></code>
 
 ```
 ட 
@@ -9,15 +9,19 @@ Summary not provided.
 
 ## `public` Properties
 
-### Comments <code><span title="undefined">CommonComments</span></code>
+### Example <code><span title="undefined">String</span></code>
 
 Summary not provided.
 
-### Info <code><span title="undefined">MethodInfo</span></code>
+### Inheritdoc <code><span title="undefined">InheritdocTag</span></code>
 
 Summary not provided.
 
-### Name <code><span title="undefined">String</span></code> `static` `virtual` `readonly`
+### Remarks <code><span title="undefined">String</span></code>
+
+Summary not provided.
+
+### Summary <code><span title="undefined">String</span></code>
 
 Summary not provided.
 
@@ -63,4 +67,4 @@ Summary not provided.
 
 Summary not provided.
 
-- *@returns* ns* 
+- *@returns* 
